--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.10"]
-#        python-version: ["3.10", "3.11"]
+#        python-version: ["3.10"]
+        python-version: ["3.10", "3.11"]
 
     runs-on: ubuntu-latest
     steps:
