--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iot-utils"
-version = "0.5.2"
+version = "0.5.3"
 description = ""
 authors = ["Thomas Kleinöder <devel@time4oss.de>"]
 readme = "README.md"
@@ -9,14 +9,14 @@ license = "GPLv3"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-paho-mqtt = "^1.6.1"
+paho-mqtt = "^1"
 awsiotsdk = "^1.19.0"
 redis = {extras = ["hiredis"], version = "^5.0.1"}
-pydantic-settings = "^2.0.3"
-fastapi = "^0.104.1"
-ping3 = "^4.0.4"
-psutil = "^5.9.6"
-uvicorn = {extras = ["standard"], version = "^0.23.2"}
+pydantic-settings = "^2.2.1"
+fastapi = "^0.110.0"
+ping3 = "^4"
+psutil = "^5"
+uvicorn = "^0.28.0"
 httpx = "^0.25.2"
 
 
