--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: true
       matrix:
 #        python-version: ["3.10"]
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.11", "3.12"]
 
     runs-on: ubuntu-latest
     steps:
@@ -39,7 +39,7 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
       with:
-        username: ${{ secrets.DOCKERHUB_USER }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push Docker image
